[tool.poetry]
name = "pydlt"
version = "0.1.4"
description = "A pyre-python library to handle AUTOSAR DLT."
authors = ["Miki, Hiromitsu <mikiepure+dev@gmail.com>"]
license = "MIT"
homepage = "https://mikiepure.github.io/"
repository = "https://github.com/mikiepure/pydlt"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
click = ">=8.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
rope = "*"
pytest = "*"

[tool.poetry.scripts]
pydlt = 'pydlt.console:cli'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
